<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- Here you put the rest of your current view-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/app_logo"
            android:paddingTop="16dp"
            android:src="@drawable/q_logo_slogan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/arista_pro_alternate_regular"
            android:text="@string/login"
            android:textColor="@color/purple"
            android:textSize="40sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:hintTextColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:hintTextColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="30dp"
            android:background="#00000000"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            android:fontFamily="@font/regular_inter"
            android:textColor="@color/purple" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/regular_inter"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/regular_inter"
            android:background="#00000000"
            android:text="@string/new_user_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/purple" />

        <Button
            android:id="@+id/btn_join_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:text="@string/join_as_a_guest"
            android:textAllCaps="false"
            android:textColor="@color/purple" />

    </LinearLayout>
</ScrollView>