<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- Here you put the rest of your current view-->

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SignupActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/app_logo"
            android:paddingTop="10dp"
            android:src="@drawable/q_logo_slogan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/arista_pro_alternate_regular"
            android:text="@string/new_account"
            android:textColor="@color/purple"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_FirstName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/first_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_LastName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/last_name"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="330dp"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/confirm_password"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Old Birthdate button here-->


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:startIconDrawable="@drawable/baseline_calendar_month_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_bithdate"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/birth_date"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Register"
            android:text="Register"
            android:layout_gravity="center"
            android:textAllCaps="false"/>


        <TextView
            android:id="@+id/tv_loginRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_have_account_login" />


    </LinearLayout>
</ScrollView>