<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_dialog_forget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_forgotPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fill"
            android:textColor="@color/white"
            android:drawableStart="@drawable/baseline_lock_reset_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/regular_inter"
            android:padding="10dp"
            android:text="@string/forget_password"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/purple"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/regular_inter"
            android:layout_marginTop="8dp"
            android:text="@string/enter_your_email_address"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/et_EditBox"
            app:layout_constraintTop_toBottomOf="@id/tv_forgotPasswordTitle" />

        <EditText
            android:hint="@string/ex_name_gmail_com"
            android:inputType="textEmailAddress"
            android:id="@+id/et_EditBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/regular_inter"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColor="@color/turquoise_bright"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgotPasswordTitle" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:fontFamily="@font/regular_inter"

            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@id/btn_reset"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_EditBox" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/reset"
            android:fontFamily="@font/regular_inter"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>