<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadChestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/ll_mainScreen">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/choose_chest_image_for_diagnosis"
            android:textColor="@color/purple"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/iv_chest"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/chest_image"
            android:contentDescription="@string/brain" />
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Result"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textSize="24dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:fontFamily="@font/regular_inter"
                android:text="@string/upload"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_Camera"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:fontFamily="@font/regular_inter"
                android:text="@string/camera"
                android:textAllCaps="false"
                />

        </LinearLayout>

        <!--Diabled till the image is uploaded successfully-->
        <Button
            android:id="@+id/btn_get_results"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/turquoise_bright"
            android:textColor="@color/purple"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular_inter"
            android:text="@string/get_results"
            android:textAllCaps="false" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/ll_loadingScreen">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.477"  />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Loading Results..."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.046"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>