<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".Chest_CT_Intructions">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/poppins_semibold"
    android:text="Chest X-Ray Instructions"
    android:textColor="@color/purple"
    android:textSize="25sp" />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:src="@drawable/chest_xray" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/rounded_border"

    android:orientation="vertical">

    <TextView
        android:id="@+id/instruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/regular_inter"
        android:text="@string/xray_instruction1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/instruction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/regular_inter"
        android:text="@string/instruction2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/instruction3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/regular_inter"
        android:text="@string/instruction3"
        android:textSize="16sp" />


</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <CheckBox
        android:id="@+id/ct_instruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/regular_inter"
        android:text="I agree that I will upload an image of type CT for Chest." />

</LinearLayout>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp">

    <CheckBox
        android:id="@+id/ct_instruction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/regular_inter"
        android:text="I agree that I will upload a clear image that has the right orientation and view " />

</LinearLayout>


<Button
    android:id="@+id/btn_Next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="Next"
    android:textAllCaps="false"
    android:visibility="invisible" />


</LinearLayout>